# sensor-manager

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh
src/: main.cpp  sensor-manager.cpp  sensor-manager.h
